[package]
name = "portman"
version = "0.1.0"
edition = "2018"
description="NSCLDAQ port manager server"
license = "GPL2"
repository="https://git.frib.msu.edu/daqdev/portmanager.git"
homepage="http://frib.msu.edu/docs/daq"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#  Provide argument processing using the 'clap' crate
#  per tutorial at:  
#   https://blog.logrocket.com/command-line-argument-parsing-rust-using-clap/
#  Reference at:
#   https://docs.rs/clap/latest/clap/
#
#  Note at this time.. in order to get a debian buster
#  Compilation we _must_ specify an exact version
#
clap =  "=2.27.1"